Fixed footer; better features section style

--- a/FluentPort.Website/download/index.html
+++ b/FluentPort.Website/download/index.html
@@ -52,7 +52,10 @@
         </section>
     </main>
     <footer>
-            <p>&copy;2025 All rights reserved – <a href="https://www.fluentport.com/terms-of-service">Terms Of Service</a> – <a href="https://www.fluentport.com/privacy-policy">Privacy Policy</a></p>
+            <p>&copy;2025 All rights reserved</p>
+            <p><a href="https://discord.gg/HTgZgtfQ78">Discord community</a> – <a href="https://github.com/Adisol07/FluentPort">GitHub repository</a></p>
+            <p><a href="https://www.fluentport.com/terms-of-service">Terms Of Service</a> – <a href="https://www.fluentport.com/privacy-policy">Privacy Policy</a></p>
+
     </footer>
 
     <script src="./scrollheader.js"></script>
