--- a/FluentPort.Website/download/index.html
+++ b/FluentPort.Website/download/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FluentPort – Download</title>
-    <link rel="stylesheet" href="../style.css?v=7">
+    <link rel="stylesheet" href="../style.css?v=10">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -26,7 +26,6 @@
     </header>
     <main>
         <section id="downloadSection">
-            <!--<h1>Coming <span>Soon</span>...</h1>-->
             <h2>Download FluentPort 0.1.1</h2>
             <div class="downloadBox">
                 <div id="win-x64">
@@ -52,10 +51,17 @@
         </section>
     </main>
     <footer>
-            <p>&copy;2025 All rights reserved</p>
-            <p><a href="https://discord.gg/HTgZgtfQ78">Discord community</a> – <a href="https://github.com/Adisol07/FluentPort">GitHub repository</a></p>
-            <p><a href="https://www.fluentport.com/terms-of-service">Terms Of Service</a> – <a href="https://www.fluentport.com/privacy-policy">Privacy Policy</a></p>
-
+            <div id="first-row-footer">
+                <div id="footer-label"><p>FluentPort</p></div>
+                <div id="footer-media">
+                    <p><a href="https://discord.gg/HTgZgtfQ78">Discord community</a> – <a href="https://github.com/Adisol07/FluentPort">GitHub repository</a></p>
+                </div>
+                <div id="footer-contact"><p><a href="mailto:support@fluentport.com">support@fluentport.com</a></p></div>
+            </div>
+            <div id="second-row-footer">
+                <p id="footer-copy">&copy;2025 All rights reserved</p>
+                <p id="footer-terms"><a href="https://www.fluentport.com/terms-of-service">Terms Of Service</a> – <a href="https://www.fluentport.com/privacy-policy">Privacy Policy</a></p>
+            </div>
     </footer>
 
     <script src="./scrollheader.js"></script>
