--- a/FluentPort.Website/download/index.html
+++ b/FluentPort.Website/download/index.html
@@ -28,17 +28,39 @@
         <section id="downloadSection">
             <h2>Download FluentPort 0.1.1</h2>
             <div class="downloadBox">
-                <div id="win-x64">
-                    <h2>Windows x64</h2>
-                    <a href="https://dl.dropboxusercontent.com/scl/fi/s1cavo5yiw86rxgbfz1py/win-x64_0.1.1.zip?rlkey=lflqe5pr3y5uur4bqm1li051r&st=onufj5xf&dl=1"><div class="btn primaryBtn">Download</div></a>
+                <div>
+                    <div id="win-x64">
+                        <h2>Windows x64</h2>
+                        <a href="https://dl.dropboxusercontent.com/scl/fi/s1cavo5yiw86rxgbfz1py/win-x64_0.1.1.zip?rlkey=lflqe5pr3y5uur4bqm1li051r&st=onufj5xf&dl=1"><div class="btn primaryBtn">Download</div></a>
+                    </div>
+                    <div id="win-arm64">
+                        <h2>Windows ARM-64</h2>
+                        <a href="https://dl.dropboxusercontent.com/scl/fi/898pr4xxq8nqnunwlevik/win-arm64_0.1.1.zip?rlkey=xu681091dxcm8gbmdv48ppx5z&st=itx4y9c5&dl=1"><div class="btn primaryBtn">Download</div></a>
+                    </div>
                 </div>
-                <div id="win-arm64">
-                    <h2>Windows ARM-64</h2>
-                    <a href="https://dl.dropboxusercontent.com/scl/fi/898pr4xxq8nqnunwlevik/win-arm64_0.1.1.zip?rlkey=xu681091dxcm8gbmdv48ppx5z&st=itx4y9c5&dl=1"><div class="btn primaryBtn">Download</div></a>
+                <div>
+                    <div id="osx-x64">
+                        <h2>MacOS x64</h2>
+                        <p>Coming Soon</p>
+                        <a href=""><div class="btn primaryBtn disabledBtn">Download</div></a>
+                    </div>
+                    <div id="osx-arm64">
+                        <h2>MacOS ARM-64</h2>
+                        <p>Preparing..</p>
+                        <a href=""><div class="btn primaryBtn disabledBtn">Download</div></a>
+                    </div>
                 </div>
-                <div id="osx-arm64">
-                    <h2>MacOS ARM-64</h2>
-                    <a href="https://dl.dropboxusercontent.com/scl/fi/llp5px6qup6vkr61r3oun/osx-arm64_0.1.1.zip?rlkey=0u4d39g02deap1mc5jk4u0bu3&st=6p4ydzqa&dl=1"><div class="btn primaryBtn">Download</div></a>
+                <div>
+                    <div id="linux-x64">
+                        <h2>Linux x64</h2>
+                        <p>Coming Soon</p>
+                        <a href=""><div class="btn primaryBtn disabledBtn">Download</div></a>
+                    </div>
+                    <div id="linux-arm64">
+                        <h2>Linux ARM-64</h2>
+                        <p>Coming Soon</p>
+                        <a href=""><div class="btn primaryBtn disabledBtn">Download</div></a>
+                    </div>
                 </div>
             </div>
             <h2>How to download FluentPort?</h2>
